--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.10.3",
-    "axios": "^0.19.2",
+    "axios": "^0.20.0",
     "discord.js": "^12.2.0",
     "discord.js-docs": "^0.1.2",
-    "fs": "0.0.1-security"
+    "dotenv": "^8.2.0",
+    "fs": "0.0.1-security",
+    "moment": "^2.29.0",
+    "turndown": "^6.0.0"
   },
   "devDependencies": {},
   "description": ""
