--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TOKEN_BOT=MzM1MDUwNzAzOTA5Mjg5OTg3.WWd2SA.7zlA9SYyN1OceB8iiDMHGaw98ss
-PREFIX_BOT=&
+TOKEN_BOT={YOUR TOKEN}
+PREFIX_BOT={YOUR PREFIX}
